# pyident

./: .gitignore  .python-version  README.md  _experiments.py  cli.py  config.py  ensembles.py  estimators.py  io_utils.py  jax_accel.py  jax_accelerator.py  metrics.py  offline_plots.py  plots.py  projectors.py  pyproject.toml  run_single.py  signals.py  simulation.py  sys_utils.py  tests.py
algs/: truncated_ho_kalman.py  twostage.py
estimators/: __init__.py  dmdc.py  gradient_based.py  moesp.py
examples/: ch4.py
experiments/: F1_x0_bad.py  F1_x0_badproj.py  F1_x0_boxplot.py  F1_x0_good.py  F1_x0_goodproj.py  F1_x0_noisy_sweep.py  F1_x0_sweep.py  INTERPRETATION_GUIDE.md  PEorder.py  __init__.py  analysis.py  exp_ctrl_prbs.py  exp_x0_unctrl.py  fullrun.py  heatmaps.py  initstate.py  interpretation_aids.py  sim1.py  sim1_extended.py  sim1_old.py  sim1_regimes.py  sim1_str.py  sim1c5.py  sim2.py  sim3.py  sim3extended.py  sim4.py  sim4vis.py  sim_combreg.py  sim_cor.py  sim_corr_main.py  sim_equi.py  sim_eqv_cl.py  sim_eqvcl_sweep.py  sim_escon.py  sim_mse.py  sim_n_vs_sparse.py  sim_pe.py  sim_pealt.py  sim_recon.py  (+16 more)
loggers/: __init__.py  ledger.py  seeding.py  tolerances.py
logging/: __init__.py  ledger.py  runtime_banner.py
notebooks/: example41_report.ipynb  example41_trajs.ipynb  sparsity.ipynb  underactuation.ipynb
tests/: conftest.py  helpers.py  test_cli_and_io.py  test_edge_cases.py  test_ensembles.py  test_ensembles_basics.py  test_errors_and_logging.py  test_estimators.py  test_estimators_deep.py  test_experiments_smoke.py  test_gramians.py  (+23 more)
(+1 files in other folders)
