[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyident"
version = "0.1.0"
description = "Identifiability experiments: ensembles, estimators, and metrics"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Aybüke Ulusarslan" }]

# Core runtime deps (imported at module import time)
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "torch>=2.2.0",
  "torchdiffeq>=0.2.3",
]

[project.optional-dependencies]
# Optional: CT/DT sparse/feature-selection estimators
pysindy = [
  "pysindy>=1.7.5",
  "scikit-learn>=1.3",
]
# Dev & test tooling
dev = [
  "pytest>=8",
  "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["pyident"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 0
